src/main/resources/Krakatau-master/tests/assembler/bad/missingmethod.j
.version 47 0
.class public super missingmethod
.super java/lang/Object

.method public static varargs main : ([Ljava/lang/String;)V
    .code stack 94 locals 2
        invokeinterface


        return
    .end code
.end method